# sgGWR

./: LICENSE  README.md  pyproject.toml
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  modules.html  modules.rst  objects.inv  py-modindex.html  search.html  searchindex.js  sgGWR.html  sgGWR.optimizers.html
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  sgGWR.doctree  sgGWR.optimizers.doctree
docs/.doctrees/examples/: adaptive.doctree  init_bandwidth.doctree  introduction.doctree  mgwr.doctree
docs/.doctrees/nbsphinx/examples/: introduction.ipynb
docs/_sources/examples/: init_bandwidth.ipynb.txt  mgwr.ipynb.txt
docs/examples/: adaptive.html  adaptive.ipynb  init_bandwidth.html  introduction.html  introduction.ipynb  mgwr.html
docs_src/: conf.py  index.rst  sgGWR.optimizers.rst  sgGWR.rst
docs_src/_build/: objects.inv  py-modindex.html  search.html  searchindex.js  sgGWR.html  sgGWR.optimizers.html  test.html
docs_src/_build/.doctrees/: environment.pickle  index.doctree  modules.doctree  sgGWR.doctree  sgGWR.optimizers.doctree  test.doctree
docs_src/_build/.doctrees/examples/: introduction.doctree
docs_src/_build/_sources/: index.rst.txt  test.ipynb.txt
docs_src/_build/_sources/examples/: introduction.ipynb.txt
docs_src/_build/examples/: introduction.html
docs_src/examples/: introduction.ipynb
sgGWR/: __init__.py  kernels.py  models.py
sgGWR/optimizers/: __init__.py  existings.py  existings_numpy.py  golden.py  second.py  sg.py  sg_numpy.py  vr.py
test/: adaptive_test.py  import_test.py  mgwr_test.py
