[project]
name = "sgGWR"
authors = [{name = "Hayato Nishi", email = "hnishiua@gmail.com"}]
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "tqdm>=4.60.0",
    "scipy>=1.6.2",
    "numpy>=1.19.2",
]

[project.optional-dependencies]
jax = [
    "optax>=0.0.9",
    "jax>=0.2.12"
]
dev = [
    "build",
    "twine",
]

[project.urls]
"Homepage" = "https://github.com/hayato-n/sgGWR"